--- a/.github/workflows/ga.yml
+++ b/.github/workflows/ga.yml
@@ -37,7 +37,7 @@ jobs:
           pipenv run pytest --cov=pypro
       - name: Posting Coverage
         env:
-          CODECOV_TOKEN: ''
+          CODECOV_TOKEN: '6806a337-c294-4081-af91-06ba932116c4'
         run: |
           pipenv run codecov
       - name: Upload coverage to Codecov
