--- a/.github/workflows/ga.yml
+++ b/.github/workflows/ga.yml
@@ -32,14 +32,14 @@ jobs:
       - name: Lint with flake8
         run: |
           pipenv run flake8 .
-#      - name: Test with pytest
-#        run: |
-#          pipenv run pytest --cov=pypro
-#      - name: Posting Coverage
-#        env:
-#          CODECOV_TOKEN: '6806a337-c294-4081-af91-06ba932116c4'
-#        run: |
-#          pipenv run codecov
-#      - name: Upload coverage to Codecov
-#        uses: codecov/codecov-action@v2
-#
+      - name: Test with pytest
+        run: |
+          pipenv run pytest --cov=escola
+      - name: Posting Coverage
+        env:
+          CODECOV_TOKEN: '6806a337-c294-4081-af91-06ba932116c4'
+        run: |
+          pipenv run codecov
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+
